--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <ul>
       <li><a href="01/">Day One - Musical Keyboard</a></li>
+      <li><a href="02/">Day Two - Analogic Clock</a></li>
     </ul>
   </body>
 </html>
